Remove unused text

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
     <blockquote>
     <p>Cours de BigData.</p>
     <!-- Afficher les documents dont trackName commence par la lettre sélectionnée -->
-    <form action="/get-result-from-lettre?lettre=" method="get">
+    <form action="/get-result-from-lettre" method="get">
         <label for="letters">Select a letter:</label>
         <select name="lettre" id="lettre">
             {% for letter in 'ABCDEFGHIJKLMNOPQRSTUVWXYZ' %}
