--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,30 @@
 
 
     <!-- Autre recherche -->
+    <form action="/get-result-sorted?sorting=?order=" method="get">
+        <label for="sorting"> Sort by: </label>
+        <select name="sorting" id="sorting-form">
+            <option value="tempo">tempo</option>
+            <option value="msPlayed">ms played</option>
+            <option value="danceability">danceability</option>
+            <option value="energy">energy</option>
+            <option value="loudness">loudness</option>
+            <option value="mode">mode</option>
+            <option value="speechness">speechness</option>
+            <option value="acousticness">acousticness</option>
+            <option value="instrumentalness">instrumentalness</option>
+            <option value="liveness">liveness</option>
+            <option value="valence">valence</option>
+            <option value="duration_ms">duration</option>
+            <option value="time_signature">time signature</option>
+            <option value="key">key</option>
+        </select>
+        <select name="order" id="sorting-order">
+            <option value="Ascending">Ascending</option>
+            <option value="Descending">Descending</option>
+        </select>
+        <input type="submit" value="Submit">
+    </form>
 
 
     
