mise en forme du résultat

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
     </form>
 
 
-    <!-- Autre recherche -->
+    <!-- Tri par tag ascendant ou descendant -->
     <form action="/get-result-sorted?sorting=?order=" method="get">
         <label for="sorting"> Sort by: </label>
         <select name="sorting" id="sorting-form">
