--- a/templates/index.html
+++ b/templates/index.html
@@ -6,10 +6,11 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="../static/style.css">
     <title>Home</title>
 </head>
 <body>
-    <h1 style="background: color(srgb rgb(41, 82, 129) green blue);">Welcome to our  Quotes Page</h1>
+    <h1 style="">Welcome to our  Quotes Page</h1>
     <blockquote>
     <p>Cours de BigData.</p>
     <!-- Afficher les documents dont trackName commence par la lettre sélectionnée -->
