--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <script type="text/javascript">
         var result = {{ result|safe }};
     </script>
+    <link rel="stylesheet" href="../static/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../static/style.css">
