Corrections dernires minutes

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <title>Home</title>
 </head>
 <body>
-    <h1 style="">Welcome to our  Quotes Page</h1>
+    <h1>Welcome to our  Quotes Page</h1>
     <blockquote>
     <p>Cours de BigData.</p>
     <!-- Afficher les documents dont trackName commence par la lettre sélectionnée -->
@@ -26,7 +26,6 @@
 
 
     <!-- Recherche par genre -->
-
     <form action="/get-result-from-genre?" method="get">
         <label for="type">Choose a genre:</label>  
             <input name="genre" value="{{ genre }}">{{genre}}</input>
