--- a/static/style.css
+++ b/static/style.css
@@ -6,3 +6,9 @@ form {
 select {
     width: 100px;
 }
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.2rem;
+    background-color: #f5f5f5;
+}
