fix de bug lorsqu'on rentre un genre inconnue

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,8 @@
             <label for="type">Choose a genre:</label>  
                 <input name="genre" value="{{ genre }}">{{genre}}</input>
             <input type="submit" value="Submit">
-        </form>
+        </form> 
+        <span id="errormessage" style="color: red">{{errormessage}}</span>
 
 
         <!-- Tri par tag ascendant ou descendant -->
