--- a/templates/index.html
+++ b/templates/index.html
@@ -32,8 +32,8 @@
             <!-- Recherche par genre -->
             <form action="/get-result-from-genre?" method="get">
                 <label for="type">Choose a genre:</label>  
-                    <input name="genre" value="{{ genre }}">{{genre}}</input>
-                <input type="submit" value="Submit">
+                    <input class="button" name="genre" value="{{ genre }}">{{genre}}</input>
+                <input class="button" type="submit" value="Submit">
             </form> 
             <span id="errormessage" style="color: red">{{errormessage}}</span>
 
