Style titre page

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <!-- make h1 title go to home page if clicked and remove underline-->
-        <h1><a href="/" style="text-decoration: none; color: black;">Welcome to Spoutify !</a></h1>
+        <h1 style="text-align: center;"><a href="/" style="text-decoration: none; color: #2A128A;">Welcome to Spoutify !</a></h1>
 
         <div class="selection-area">
             <!-- Afficher les documents dont trackName commence par la lettre sélectionnée -->
