--- a/static/style.css
+++ b/static/style.css
@@ -10,18 +10,13 @@ select {
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.2rem;
-    /* background-image: radial-gradient(
-      farthest-corner at 40px 40px,
-      rgba(146, 197, 255, 0.671) 0%,
-      rgba(60, 151, 255, 0.76) 100%
-    ); */
-    /* apply image from url as background. Make it fit screen width and not move when scrolling down the screen */
     background-image: url("https://bretzoule.eu/assets/icey-background.693d2065.png");
     background-size: cover;
     background-attachment: fixed;
 }
 
 .button {
+  width: auto;
   background-color: #D8E8FE;
   border-radius: 8px;
   border-width: 0;
@@ -47,8 +42,9 @@ body {
 .selection-area {
     text-align: center;
     color: #fff;
-    margin-top: 10px;
-    margin-bottom: 10px;
     border-radius: 10px;
     background-color: #1e2737ad;
+    width: 500px;
+    margin: auto;
+    padding: 10px;
 }
