--- a/templates/index.html
+++ b/templates/index.html
@@ -7,12 +7,15 @@
         <link rel="stylesheet" type="text/css" href="../static/style.css">
         <!-- Google Fonts Link For Icons -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-
         <script type="text/javascript">
             var result = {{ result|safe }};
         </script>
     </head>
     <body>
+        <button action="./analytics" type="submit">
+            <i class="py-2 px-6 m-2 text-indigo-100 transition-colors duration-150 bg-indigo-700 rounded-lg"
+              aria-hidden="true">Génerer l'étude</i>
+          </button>
         <!-- make h1 title go to home page if clicked and remove underline-->
         <h1><a href="/" style="text-decoration: none; color: black;">Welcome to Spoutify !</a></h1>
         <!-- Afficher les documents dont trackName commence par la lettre sélectionnée -->
@@ -61,8 +64,6 @@
             </select>
             <input type="submit" value="Submit">
         </form>
-
-
         <!-- Affichage du résultat -->
         <p> {{ result|safe }} </p>
     </body>
