--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="../static/style.css">
         <!-- Google Fonts Link For Icons -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-        <script type="text/javascript" src="../static/table.js">
+        <script type="text/javascript" src="../static/table.js"></script>
         <script type="text/javascript">
             var result = {{ result|safe }};
         </script>
@@ -67,8 +67,8 @@
 
         <!-- Affichage du résultat -->
         <div>
-            <button onclick="show_page(page - 25)">Prev</button>
-            <button onclick="show_page(page + 25)">Next</button> </div>
+            <button class="button" onclick="show_page(page - 25)">Prev</button>
+            <button class="button" onclick="show_page(page + 25)">Next</button> </div>
         </body>
         <p> {{ result|safe }} </p>
 
