--- a/templates/index.html
+++ b/templates/index.html
@@ -83,6 +83,13 @@
                 <button class="button" onclick="show_page(page + 15)">Next</button>
             </div>
         </div>
-    </body>
 
+        <footer>
+            <!--  put it to very bottom of the page -->
+            <div class="footer">
+                DEBET Stanislas - GOBBO Fanny - MADRELLE Alexis    -    Copyright © - 2023 - All right reserved
+            </div>
+        </footer>
+
+    </body>
 </html>
